# cdk-lab-pgvector-igdb

./: .env.example  .gitignore  README.md  app.py  cdk.context.json.example  pyproject.toml  requirements-layer.txt  requirements.txt
cdk_lab_pgvector_igdb/: cdk_lab_pgvector_igdb_stack.py
lambda/: index.py
model/code/: inference.py
notebooks/: 1-get-embeddings-and-import.ipynb  2-1-inference-in-notebook.ipynb  2-2-inference-with-gradio.ipynb
scripts/: get_assets.sh
stacks/: iam_stack.py  lambda_stack.py  rds_stack.py  s3_stack.py  sagemaker_stack.py  top_stack.py  vpc_stack.py
tests/unit/: test_cdk_lab_pgvector_igdb_stack.py
